[ci skip] Updates

--- a/globals.html
+++ b/globals.html
@@ -82,12 +82,6 @@
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
-							<h3>Interfaces</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-interface"><a href="interfaces/filedownloader.html" class="tsd-kind-icon">File<wbr>Downloader</a></li>
-							</ul>
-						</section>
-						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-function"><a href="globals.html#createdownloader" class="tsd-kind-icon">create<wbr>Downloader</a></li>
@@ -102,15 +96,23 @@
 					<a name="createdownloader" class="tsd-anchor"></a>
 					<h3>create<wbr>Downloader</h3>
 					<ul class="tsd-signatures tsd-kind-function">
-						<li class="tsd-signature tsd-kind-icon">create<wbr>Downloader<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="classes/downloader.html" class="tsd-signature-type">Downloader</a></li>
+						<li class="tsd-signature tsd-kind-icon">create<wbr>Downloader<span class="tsd-signature-symbol">(</span>dowloaderOptions<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="classes/downloader.html" class="tsd-signature-type">Downloader</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/7762915/src/lib/downloader.ts#L140">lib/downloader.ts:140</a></li>
+									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/Downloader.ts#L197">lib/Downloader.ts:197</a></li>
 								</ul>
 							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> dowloaderOptions: <span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol"> = {}</span></h5>
+									<ul class="tsd-parameters">
+									</ul>
+								</li>
+							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="classes/downloader.html" class="tsd-signature-type">Downloader</a></h4>
 						</li>
 					</ul>
@@ -139,9 +141,6 @@
 					<li class=" tsd-kind-class">
 						<a href="classes/downloader.html" class="tsd-kind-icon">Downloader</a>
 					</li>
-					<li class=" tsd-kind-interface">
-						<a href="interfaces/filedownloader.html" class="tsd-kind-icon">File<wbr>Downloader</a>
-					</li>
 					<li class=" tsd-kind-function">
 						<a href="globals.html#createdownloader" class="tsd-kind-icon">create<wbr>Downloader</a>
 					</li>
@@ -162,9 +161,6 @@
 			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private method</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 		</div>
 	</div>
