--- a/enums/downloaderstate.html
+++ b/enums/downloaderstate.html
@@ -90,7 +90,7 @@
 					<div class="tsd-signature tsd-kind-icon">DOWNLOADING<span class="tsd-signature-symbol">:</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/7762915/src/lib/downloader.ts#L12">lib/downloader.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/enums/DownloaderState.ts#L2">lib/enums/DownloaderState.ts:2</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -100,7 +100,7 @@
 					<div class="tsd-signature tsd-kind-icon">PAUSED<span class="tsd-signature-symbol">:</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/7762915/src/lib/downloader.ts#L13">lib/downloader.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/enums/DownloaderState.ts#L3">lib/enums/DownloaderState.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -110,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">STAND_<wbr>BY<span class="tsd-signature-symbol">:</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/7762915/src/lib/downloader.ts#L15">lib/downloader.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/enums/DownloaderState.ts#L5">lib/enums/DownloaderState.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -120,7 +120,7 @@
 					<div class="tsd-signature tsd-kind-icon">STOPED<span class="tsd-signature-symbol">:</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/7762915/src/lib/downloader.ts#L14">lib/downloader.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/enums/DownloaderState.ts#L4">lib/enums/DownloaderState.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -166,9 +166,6 @@
 					<li class=" tsd-kind-class">
 						<a href="../classes/downloader.html" class="tsd-kind-icon">Downloader</a>
 					</li>
-					<li class=" tsd-kind-interface">
-						<a href="../interfaces/filedownloader.html" class="tsd-kind-icon">File<wbr>Downloader</a>
-					</li>
 					<li class=" tsd-kind-function">
 						<a href="../globals.html#createdownloader" class="tsd-kind-icon">create<wbr>Downloader</a>
 					</li>
@@ -189,9 +186,6 @@
 			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private method</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 			</ul>
 		</div>
 	</div>
