[ci skip] Updates

--- a/classes/dispatcherevent.html
+++ b/classes/dispatcherevent.html
@@ -114,7 +114,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/DispatcherEvent.ts#L3">lib/DispatcherEvent.ts:3</a></li>
+									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/5d0a7ba/src/lib/DispatcherEvent.ts#L3">lib/DispatcherEvent.ts:3</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -133,10 +133,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="callbacks" class="tsd-anchor"></a>
 					<h3>callbacks</h3>
-					<div class="tsd-signature tsd-kind-icon">callbacks<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></div>
+					<div class="tsd-signature tsd-kind-icon">callbacks<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = []</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/DispatcherEvent.ts#L3">lib/DispatcherEvent.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/5d0a7ba/src/lib/DispatcherEvent.ts#L3">lib/DispatcherEvent.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -146,7 +146,7 @@
 					<div class="tsd-signature tsd-kind-icon">event<wbr>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/DispatcherEvent.ts#L2">lib/DispatcherEvent.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/5d0a7ba/src/lib/DispatcherEvent.ts#L2">lib/DispatcherEvent.ts:2</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -163,7 +163,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/DispatcherEvent.ts#L21">lib/DispatcherEvent.ts:21</a></li>
+									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/5d0a7ba/src/lib/DispatcherEvent.ts#L21">lib/DispatcherEvent.ts:21</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -186,7 +186,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/DispatcherEvent.ts#L10">lib/DispatcherEvent.ts:10</a></li>
+									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/5d0a7ba/src/lib/DispatcherEvent.ts#L10">lib/DispatcherEvent.ts:10</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -227,7 +227,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/DispatcherEvent.ts#L14">lib/DispatcherEvent.ts:14</a></li>
+									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/5d0a7ba/src/lib/DispatcherEvent.ts#L14">lib/DispatcherEvent.ts:14</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
