--- a/classes/dispatcher.html
+++ b/classes/dispatcher.html
@@ -87,6 +87,7 @@
 						<section class="tsd-index-section ">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="dispatcher.html#clean" class="tsd-kind-icon">clean</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="dispatcher.html#dispatch" class="tsd-kind-icon">dispatch</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="dispatcher.html#off" class="tsd-kind-icon">off</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="dispatcher.html#on" class="tsd-kind-icon">on</a></li>
@@ -103,7 +104,7 @@
 					<div class="tsd-signature tsd-kind-icon">events<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/Dispatcher.ts#L4">lib/Dispatcher.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/5d0a7ba/src/lib/Dispatcher.ts#L4">lib/Dispatcher.ts:4</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -116,6 +117,23 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Methods</h2>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="clean" class="tsd-anchor"></a>
+					<h3>clean</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">clean<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/5d0a7ba/src/lib/Dispatcher.ts#L32">lib/Dispatcher.ts:32</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
 					<a name="dispatch" class="tsd-anchor"></a>
 					<h3>dispatch</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -125,7 +143,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/Dispatcher.ts#L6">lib/Dispatcher.ts:6</a></li>
+									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/5d0a7ba/src/lib/Dispatcher.ts#L6">lib/Dispatcher.ts:6</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -151,7 +169,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/Dispatcher.ts#L22">lib/Dispatcher.ts:22</a></li>
+									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/5d0a7ba/src/lib/Dispatcher.ts#L22">lib/Dispatcher.ts:22</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -195,7 +213,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/2c1399d/src/lib/Dispatcher.ts#L13">lib/Dispatcher.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/emodyz/NodeDownloader/blob/5d0a7ba/src/lib/Dispatcher.ts#L13">lib/Dispatcher.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -251,6 +269,9 @@
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-class">
 								<a href="dispatcher.html#events" class="tsd-kind-icon">events</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="dispatcher.html#clean" class="tsd-kind-icon">clean</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="dispatcher.html#dispatch" class="tsd-kind-icon">dispatch</a>
