--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
 				<p>File Downloader</p>
 				<p>This project was built for emodyz/LauncherMultigaming.
 				He provide a multiple files download system.</p>
+				<a href="#documentation" id="documentation" style="color: inherit; text-decoration: none;">
+					<h2>Documentation</h2>
+				</a>
+				<p><a href="https://emodyz.github.io/NodeDownloader">Documentation</a></p>
+				<p>COMING SOON</p>
 			</div>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
